--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  audioplayers: ^5.2.1
   # Use Audioplayers dependency version 0.17.4
 
 dev_dependencies:
@@ -23,3 +24,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/
